<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Amount_Golden">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/text_shape"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:background="#5954e7c5"
            android:gravity="center"
            android:text="@string/RoyalTime"
            android:layout_width="180dp"
            android:layout_height="50dp"
            />
        <View
            android:background="#54e7c5"
            android:layout_width="2dp"
            android:layout_height="match_parent">

        </View>

        <TextView
            android:gravity="center"
            android:text="@string/RoyalTimeTB"
            android:layout_width="180dp"
            android:layout_height="50dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:background="@drawable/text_shape"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:background="#5954e7c5"
            android:gravity="center"
            android:text="@string/RoyalTime1"
            android:layout_width="180dp"
            android:layout_height="50dp"
            />
        <View
            android:background="#54e7c5"
            android:layout_width="2dp"
            android:layout_height="match_parent">

        </View>

        <TextView
            android:gravity="center"
            android:text="@string/RoyalTimeTB1"
            android:layout_width="180dp"
            android:layout_height="50dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:background="@drawable/text_shape"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:background="#5954e7c5"
            android:gravity="center"
            android:text="@string/RoyalTime2"
            android:layout_width="180dp"
            android:layout_height="50dp"
            />
        <View
            android:background="#54e7c5"
            android:layout_width="2dp"
            android:layout_height="match_parent">

        </View>

        <TextView
            android:gravity="center"
            android:text="@string/RoyalTimeTB2"
            android:layout_width="180dp"
            android:layout_height="50dp"
            />
    </LinearLayout>

</LinearLayout>